frontend/test/should_fail/mismatch_of_match_type2.grg
test foo
{
	def var i:int;
}

test bar
{
	def var i:int;
}

filter filterRemoveNonMatching<foo>(var i:int)
{
	def ref a:array<int> = array<int>[];
	for(m:match<bar> in a)
	{
		if(m.i != i) {
			m = null; 
		}
	}
}

